unpackaged/main/default/objects/Oracle_Subscription__c/Oracle_Subscription__c.object-meta.xml
<CustomObject>
    <label>Oracle Subscription</label>
    <nameField>
        <displayFormat>OS-{000000}</displayFormat>
        <label>Oracle Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Oracle Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>