unpackaged/main/default/objects/Oracle_Subscription__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <formula>CASESAFEID(Opportunity__c)</formula>
    <label>Opportunity Id</label>
    <type>Text</type>
</CustomField>