unpackaged/main/default/objects/Oracle_Subscription__c/fields/Subscription_Number__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Number__c</fullName>
    <label>Subscription Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>