unpackaged/main/default/objects/Oracle_Subscription__c/fields/term_index__c.field-meta.xml
<CustomField>
    <fullName>term_index__c</fullName>
    <label>Term Index</label>
    <length>20</length>
    <type>Text</type>
</CustomField>