unpackaged/main/default/objects/Oracle_Subscription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Quote_Number__c</columns>
    <columns>Subscription_Number__c</columns>
    <columns>term_index__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>